fixed the iframe within the view all projects page to display better on iPhones

--- a/Django/static/css/site.css
+++ b/Django/static/css/site.css
@@ -686,14 +686,19 @@ nav {
 }
 
 .container {
-  min-width: 400px;
+  min-width: 500px;
   max-width: 1000px;
   margin: 0 auto;
   padding: 10px;
 }
 
 .iframe {
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 100px;
+  max-width: 300px;
 }
 
 /* CSS for highcharts ends */
@@ -851,54 +856,6 @@ h5.highcharts-description {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.form-group {
-  font-family: "Myriad Pro";
-  width: 342px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgba(237, 237, 237, 1);
-  background: -moz-linear-gradient(
-    top,
-    rgba(237, 237, 237, 1) 0%,
-    rgba(246, 246, 246, 1) 53%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: webkit-gradient(
-    left top,
-    left bottom,
-    color-stop(0%, rgba(237, 237, 237, 1)),
-    color-stop(53%, rgba(246, 246, 246, 1)),
-    color-stop(100%, rgba(255, 255, 255, 1))
-  );
-  background: -webkit-linear-gradient(
-    top,
-    rgba(237, 237, 237, 1) 0%,
-    rgba(246, 246, 246, 1) 53%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: -o-linear-gradient(
-    top,
-    rgba(237, 237, 237, 1) 0%,
-    rgba(246, 246, 246, 1) 53%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: -ms-linear-gradient(
-    top,
-    rgba(237, 237, 237, 1) 0%,
-    rgba(246, 246, 246, 1) 53%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background: linear-gradient(
-    to bottom,
-    rgba(237, 237, 237, 1) 0%,
-    rgba(246, 246, 246, 1) 53%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#ffffff', GradientType=0 );
 }
 
 .form-control {
